[gd_scene load_steps=2 format=3 uid="uid://dk38bwfuw844y"]

[ext_resource type="Script" path="res://game.gd" id="1_e30ie"]

[node name="Game" type="Node2D"]
script = ExtResource("1_e30ie")

[node name="TextLocalIP" type="Label" parent="."]
offset_left = 31.0
offset_top = 35.0
offset_right = 95.0
offset_bottom = 58.0
text = "Local IP:"

[node name="LocalIP" type="Label" parent="."]
offset_left = 117.0
offset_top = 36.0
offset_right = 240.0
offset_bottom = 59.0
text = "000.000.000.000"

[node name="TextPlayerName" type="Label" parent="."]
offset_left = 378.0
offset_top = 38.0
offset_right = 482.0
offset_bottom = 61.0
text = "Player Name:"

[node name="PlayerName" type="TextEdit" parent="."]
offset_left = 528.0
offset_top = 32.0
offset_right = 764.0
offset_bottom = 66.0
placeholder_text = "Enter name..."

[node name="CreateGame" type="Button" parent="."]
offset_left = 154.0
offset_top = 205.0
offset_right = 282.0
offset_bottom = 236.0
text = "Create Game"

[node name="JoinGame" type="Button" parent="."]
offset_left = 499.0
offset_top = 208.0
offset_right = 586.0
offset_bottom = 239.0
text = "Join Game
"

[connection signal="text_changed" from="PlayerName" to="." method="_on_player_name_text_changed"]
